# Amadeus-Local-AI-Handoff-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_4_PLAN.md  DOCUMENTATION_INDEX.md  GEMMA_TO_AMADEUS_BLUEPRINT.md  HANDOFF.md  IMPLEMENTATION_ROADMAP.md  LOCAL_AI_AGENT_MASTERCLASS.md  LOCAL_AI_PLAN.md  Modelfile  PHASE_10_11_12_PLAN.md  PROJECT_STATUS.md  README.md  REQUIREMENTS.md  __init__.py  __main__.py  analysiere-den-standpunkt-unseres-peppy-hopper.md  codex_erledigt.md  config.yaml  main.py  nächste steps amadeus.docx  phase9_codex_prompt.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
core/: __init__.py  agent_loop.py  analyzer.py  cli.py  gap_analysis.py  generator.py  inbox.py  material_ingestion.py  modes.py  ollama_client.py  project_registry.py  readiness.py  recorder.py  scaffolder.py  state_store.py  tool_executor.py  tool_registry.py  transcriber.py  validation_suite.py  validator.py  versioning.py  voice_pipeline.py  workflow.py  workspace_validator.py
dev_journey/: CHANGELOG.md  README.md  RESTORE_GUIDE.md
evals/: runner.py  schema.py  scorer.py
models/: __init__.py  project.py  requirements.py  state.py  tools.py
templates/: claude_md.j2  project_types.yaml  readme.j2
tests/: test_agent_loop.py  test_analyzer.py  test_cli_commands.py  test_eval_suite.py  test_generator_handoff_files.py  test_inbox.py  test_material_ingestion.py  test_material_ingestion_v2.py  test_modes.py  test_project_registry.py  test_readiness_workflow.py  test_scaffolder.py  test_tool_executor.py  (+7 more)
(+70 files in other folders)
