[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amadeus"
version = "5.0.0"
description = "Amadeus local Gemma/Ollama handoff agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "pyyaml",
    "requests",
    "faster-whisper",
]

[project.scripts]
amadeus = "amadeus.__main__:main"
